--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -41,14 +41,14 @@
     :why: 
     :versions:
     - 1.2.3
-    :when: 2020-05-31 15:28:30.302764000 Z
+    :when: 2021-12-13
 - - :approve
   - logback-classic
   - :who: 
     :why: 
     :versions:
     - 1.2.3
-    :when: 2020-05-31 15:29:03.621478000 Z
+    :when: 2021-12-13
 - - :approve
   - jakarta.xml.bind-api
   - :who: 
@@ -70,3 +70,9 @@
     :versions:
     - 1.3.5
     :when: 2020-05-31 15:29:53.045616000 Z
+- - :permit
+  - New BSD
+  - :who:
+    :why:
+    :versions: []
+    :when: 2020-09-29
