--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<properties>
+    		<log4j2.version>2.17.0</log4j2.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
